tests/rosetta/out/Rust/bitmap-b-zier-curves-quadratic.error
rustc: exit status 1
warning: denote infinite loops with `loop { ... }`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:73:9
   |
73 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0599]: no method named `parse` found for type `i32` in the current scope
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:98:22
   |
98 |         let fx1 = x1.parse::<f64>().unwrap();
   |                      ^^^^^ method not found in `i32`

error[E0599]: no method named `parse` found for type `i32` in the current scope
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:99:22
   |
99 |         let fy1 = y1.parse::<f64>().unwrap();
   |                      ^^^^^ method not found in `i32`

error[E0599]: no method named `parse` found for type `i32` in the current scope
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:100:22
    |
100 |         let fx2 = x2.parse::<f64>().unwrap();
    |                      ^^^^^ method not found in `i32`

error[E0599]: no method named `parse` found for type `i32` in the current scope
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:101:22
    |
101 |         let fy2 = y2.parse::<f64>().unwrap();
    |                      ^^^^^ method not found in `i32`

error[E0599]: no method named `parse` found for type `i32` in the current scope
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:102:22
    |
102 |         let fx3 = x3.parse::<f64>().unwrap();
    |                      ^^^^^ method not found in `i32`

error[E0599]: no method named `parse` found for type `i32` in the current scope
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:103:22
    |
103 |         let fy3 = y3.parse::<f64>().unwrap();
    |                      ^^^^^ method not found in `i32`

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:106:24
    |
106 |             let c = (i.parse::<f64>().unwrap()) / (b2Seg.parse::<f64>().unwrap());
    |                        ^^^^^
    |
help: you must specify a type for this binding, like `i32`
    |
92  |         let mut i: i32 = 0;
    |                  +++++

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:106:58
    |
106 |             let c = (i.parse::<f64>().unwrap()) / (b2Seg.parse::<f64>().unwrap());
    |                                                          ^^^^^
    |
help: you must specify a type for this binding, like `i32`
    |
10  |     let b2Seg: i32 = 20;
    |              +++++

error[E0689]: can't call method `parse` on ambiguous numeric type `{float}`
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:111:63
    |
111 |             px[i as usize] = (a2 * fx1 + b2 * fx2 + c2 * fx3).parse::<i32>().unwrap();
    |                                                               ^^^^^

error[E0689]: can't call method `parse` on ambiguous numeric type `{float}`
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:112:63
    |
112 |             py[i as usize] = (a2 * fy1 + b2 * fy2 + c2 * fy3).parse::<i32>().unwrap();
    |                                                               ^^^^^

error[E0308]: mismatched types
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:121:45
    |
121 |             line(b, &mut x0, &mut y0, x, y, &p.clone());
    |             ----                            ^^^^^^^^^^ expected `Pixel`, found `&Pixel`
    |             |
    |             arguments to this function are incorrect
    |
note: function defined here
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:55:8
    |
55  |     fn line(b: std::collections::HashMap<&'static str, i32>, x0: &mut i32, y0: &mut i32, x1: i32, y1: i32, p: Pixel) -> () {
    |        ^^^^                                                                                                --------
help: consider removing the borrow
    |
121 -             line(b, &mut x0, &mut y0, x, y, &p.clone());
121 +             line(b, &mut x0, &mut y0, x, y, p.clone());
    |

error[E0308]: mismatched types
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:129:46
    |
129 |     bezier2(b, 20, 150, 500, -100, 300, 280, &pixelFromRgb(4165615));
    |     -------                                  ^^^^^^^^^^^^^^^^^^^^^^ expected `Pixel`, found `&Pixel`
    |     |
    |     arguments to this function are incorrect
    |
note: closure parameter defined here
   --> /tmp/bitmap-b-zier-curves-quadratic.rs:89:128
    |
89  | ...r, i32>, x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, p: Pixel| -> () {
    |                                                                   ^^^^^^^^
help: consider removing the borrow
    |
129 -     bezier2(b, 20, 150, 500, -100, 300, 280, &pixelFromRgb(4165615));
129 +     bezier2(b, 20, 150, 500, -100, 300, 280, pixelFromRgb(4165615));
    |

error[E0277]: cannot calculate the remainder of `f64` divided by `{integer}`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:12:50
   |
12 |         let r = (((rgb as f64) / (65536 as f64)) % 256).parse::<i32>().unwrap();
   |                                                  ^ no implementation for `f64 % {integer}`
   |
   = help: the trait `Rem<{integer}>` is not implemented for `f64`
   = help: the following other types implement trait `Rem<Rhs>`:
             `&f64` implements `Rem<f64>`
             `&f64` implements `Rem`
             `f64` implements `Rem<&f64>`
             `f64` implements `Rem`
help: consider using a floating-point literal by writing it with `.0`
   |
12 |         let r = (((rgb as f64) / (65536 as f64)) % 256.0).parse::<i32>().unwrap();
   |                                                       ++

error[E0277]: cannot calculate the remainder of `f64` divided by `{integer}`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:13:48
   |
13 |         let g = (((rgb as f64) / (256 as f64)) % 256).parse::<i32>().unwrap();
   |                                                ^ no implementation for `f64 % {integer}`
   |
   = help: the trait `Rem<{integer}>` is not implemented for `f64`
   = help: the following other types implement trait `Rem<Rhs>`:
             `&f64` implements `Rem<f64>`
             `&f64` implements `Rem`
             `f64` implements `Rem<&f64>`
             `f64` implements `Rem`
help: consider using a floating-point literal by writing it with `.0`
   |
13 |         let g = (((rgb as f64) / (256 as f64)) % 256.0).parse::<i32>().unwrap();
   |                                                     ++

error[E0599]: no method named `parse` found for type `i32` in the current scope
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:14:29
   |
14 |         let b = (rgb % 256).parse::<i32>().unwrap();
   |                             ^^^^^ method not found in `i32`

error[E0308]: mismatched types
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:30:130
   |
30 |         return { let mut m = std::collections::BTreeMap::new(); m.insert("cols", cols); m.insert("rows", rows); m.insert("data", d); m };
   |                                                                 -                ----                             ------         ^ expected `i32`, found `Vec<Vec<Pixel>>`
   |                                                                 |                |                                |
   |                                                                 |                |                                arguments to this method are incorrect
   |                                                                 |                this argument has type `i32`...
   |                                                                 ... which causes `m` to have type `BTreeMap<&str, i32>`
   |
   = note: expected type `i32`
            found struct `Vec<Vec<Pixel>>`
help: the return type of this call is `Vec<Vec<Pixel>>` due to the type of the argument passed
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:30:113
   |
30 |         return { let mut m = std::collections::BTreeMap::new(); m.insert("cols", cols); m.insert("rows", rows); m.insert("data", d); m };
   |                                                                                                                 ^^^^^^^^^^^^^^^^^-^
   |                                                                                                                                  |
   |                                                                                                                                  this argument influences the return type of `insert`
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/collections/btree/map.rs:1023:12

error[E0308]: mismatched types
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:30:134
   |
17 |     fn newBitmap(cols: i32, rows: i32) -> std::collections::HashMap<&'static str, i32> {
   |                                           -------------------------------------------- expected `HashMap<&'static str, i32>` because of return type
...
30 |         return { let mut m = std::collections::BTreeMap::new(); m.insert("cols", cols); m.insert("rows", rows); m.insert("data", d); m };
   |                                                                                                                                      ^ expected `HashMap<&str, i32>`, found `BTreeMap<&str, i32>`
   |
   = note: expected struct `HashMap<&'static str, i32>`
              found struct `BTreeMap<&str, i32>`

error[E0599]: no method named `parse` found for reference `&i32` in the current scope
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:33:44
   |
33 |         let cols = b.get(&"cols").unwrap().parse::<i32>().unwrap();
   |                                            ^^^^^ method not found in `&i32`

error[E0599]: no method named `parse` found for reference `&i32` in the current scope
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:34:44
   |
34 |         let rows = b.get(&"rows").unwrap().parse::<i32>().unwrap();
   |                                            ^^^^^ method not found in `&i32`

error[E0608]: cannot index into a value of type `i32`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:36:23
   |
36 |             b[&"data"][y as usize][x as usize] = p.clone();
   |                       ^^^^^^^^^^^^

error[E0599]: no method named `parse` found for reference `&i32` in the current scope
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:40:44
   |
40 |         let cols = b.get(&"cols").unwrap().parse::<i32>().unwrap();
   |                                            ^^^^^ method not found in `&i32`

error[E0599]: no method named `parse` found for reference `&i32` in the current scope
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:41:44
   |
41 |         let rows = b.get(&"rows").unwrap().parse::<i32>().unwrap();
   |                                            ^^^^^ method not found in `&i32`

error[E0608]: cannot index into a value of type `i32`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:46:27
   |
46 |                 b[&"data"][y as usize][x as usize] = p.clone();
   |                           ^^^^^^^^^^^^

error[E0308]: mismatched types
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:53:22
   |
53 |         fill(&mut b, &pixelFromRgb(rgb));
   |         ----         ^^^^^^^^^^^^^^^^^^ expected `Pixel`, found `&Pixel`
   |         |
   |         arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:39:8
   |
39 |     fn fill(b: &mut std::collections::HashMap<&'static str, i32>, p: Pixel) -> () {
   |        ^^^^                                                       --------
help: consider removing the borrow
   |
53 -         fill(&mut b, &pixelFromRgb(rgb));
53 +         fill(&mut b, pixelFromRgb(rgb));
   |

error[E0277]: cannot subtract `&mut i32` from `i32`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:56:25
   |
56 |         let mut dx = x1 - x0;
   |                         ^ no implementation for `i32 - &mut i32`
   |
   = help: the trait `Sub<&mut i32>` is not implemented for `i32`
help: consider dereferencing here
   |
56 |         let mut dx = x1 - *x0;
   |                           +

error[E0277]: cannot subtract `&mut i32` from `i32`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:60:25
   |
60 |         let mut dy = y1 - y0;
   |                         ^ no implementation for `i32 - &mut i32`
   |
   = help: the trait `Sub<&mut i32>` is not implemented for `i32`
help: consider dereferencing here
   |
60 |         let mut dy = y1 - *y0;
   |                           +

error[E0308]: mismatched types
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:65:17
   |
65 |         if x0 < x1 {
   |                 ^^ expected `&mut i32`, found `i32`
   |
help: consider dereferencing the borrow
   |
65 |         if *x0 < x1 {
   |            +

error[E0308]: mismatched types
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:69:17
   |
69 |         if y0 < y1 {
   |                 ^^ expected `&mut i32`, found `i32`
   |
help: consider dereferencing the borrow
   |
69 |         if *y0 < y1 {
   |            +

error[E0308]: arguments to this function are incorrect
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:74:13
   |
74 |             setPx(&mut b, x0, y0, &p.clone());
   |             ^^^^^         --  --  ---------- expected `Pixel`, found `&Pixel`
   |                           |   |
   |                           |   expected `i32`, found `&mut i32`
   |                           expected `i32`, found `&mut i32`
   |
note: function defined here
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:32:8
   |
32 |     fn setPx(b: &mut std::collections::HashMap<&'static str, i32>, x: i32, y: i32, p: Pixel) -> () {
   |        ^^^^^                                                       ------  ------  --------
help: consider dereferencing the borrow
   |
74 |             setPx(&mut b, *x0, y0, &p.clone());
   |                           +
help: consider dereferencing the borrow
   |
74 |             setPx(&mut b, x0, *y0, &p.clone());
   |                               +
help: consider removing the borrow
   |
74 -             setPx(&mut b, x0, y0, &p.clone());
74 +             setPx(&mut b, x0, y0, p.clone());
   |

error[E0277]: can't compare `&mut i32` with `i32`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:75:19
   |
75 |             if x0 == x1 && y0 == y1 {
   |                   ^^ no implementation for `&mut i32 == i32`
   |
   = help: the trait `PartialEq<i32>` is not implemented for `&mut i32`
help: consider dereferencing here
   |
75 |             if *x0 == x1 && y0 == y1 {
   |                +

error[E0277]: can't compare `&mut i32` with `i32`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:75:31
   |
75 |             if x0 == x1 && y0 == y1 {
   |                               ^^ no implementation for `&mut i32 == i32`
   |
   = help: the trait `PartialEq<i32>` is not implemented for `&mut i32`
help: consider dereferencing here
   |
75 |             if x0 == x1 && *y0 == y1 {
   |                            +

error[E0368]: binary assignment operation `+=` cannot be applied to type `&mut i32`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:81:17
   |
81 |                 x0 += sx;
   |                 --^^^^^^
   |                 |
   |                 cannot use `+=` on type `&mut i32`
   |
help: `+=` can be used on `i32` if you dereference the left-hand side
   |
81 |                 *x0 += sx;
   |                 +

error[E0368]: binary assignment operation `+=` cannot be applied to type `&mut i32`
  --> /tmp/bitmap-b-zier-curves-quadratic.rs:85:17
   |
85 |                 y0 += sy;
   |                 --^^^^^^
   |                 |
   |                 cannot use `+=` on type `&mut i32`
   |
help: `+=` can be used on `i32` if you dereference the left-hand side
   |
85 |                 *y0 += sy;
   |                 +

error: aborting due to 33 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308, E0368, E0599, E0608, E0689.
For more information about an error, try `rustc --explain E0277`.
